# opensource-demand-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: analyze.yml  ci.yml
config/: categories.yaml
examples/: README.md  sample-report.md  sample-summary.json
src/os_analyzer/: __init__.py  analyzer.py  cli.py  demand_scorer.py  gap_analyzer.py  github_client.py  report.py
tests/: test_demand_scorer.py  test_gap_analyzer.py
